	the FETCH response in an order different that what
	we asked for.

2009-03-24  Francis Lachapelle  <flachapelle@inverse.ca>

	* SoObjects/SOGo/SOGoUser.m ([SOGoUser -invalidateLanguage]):
	new method to invalidate the language ivar.	

	* UI/MainUI/SOGoRootPage.m ([SOGoRootPage -connectAction]): must
	invalidate user's language ivar when it changes.

	* SoObjects/Appointments/SOGoCalendarComponent.m
	([SOGoCalendarComponent
	-sendEMailUsingTemplateNamed:forObject:previousObject:toAttendees:]):
	no longer send a deletion notification to an attendee who already
	declined the meeting.

	* UI/MailPartViewers/UIxMailPartICalActions.m
	([UIxMailPartICalActions -_eventObjectWithUID:forUser:]): when
	looking for an event for a specific user, we now search into all
	the user's calendar folders. 

2009-03-24  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* UI/Scheduler/UIxComponentEditor.m ([UIxComponentEditor
	-_loadAttendees]): make use of autoreleased strings to avoid a leak.
	([UIxComponentEditor -dealloc]): release componentCalendar.

	* SoObjects/SOGo/SOGoUser.m ([SOGoUser
	-_prepareDefaultMailAccounts]): return an autoreleased array to
	avoid a leak.

	* UI/Scheduler/UIxCalListingActions.m ([UIxCalListingActions
	-initWithRequest:newRequest]): retain dateFormatter, since it is
	released in -dealloc.
	([UIxCalListingActions -dealloc]): do not release startDate and
	endDate since they are not retained.

2009-03-23  Francis Lachapelle  <flachapelle@inverse.ca>

	* SoObjects/Appointments/SOGoAppointmentObject.m
	([SOGoAppointmentObject -_lookupEvent:forUID:]): when looking for
	an event for a specific user, we now search into all the user's
	calendar folders.

	* SoObjects/Appointments/SOGoAppointmentFolder.m
	([SOGoAppointmentFolder -lookupCalendarFoldersForUID:]): new
	method that returns an array of a user's calendar folders
	excluding the subscriptions.

2009-03-23  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* SoObjects/SOGo/SOGoGCSFolder.m ([SOGoGCSFolder